Replace WebClient with Feign clients