@@ -1,5 +1,8 @@
 package com.chtrembl.petstoreapp.service;
 
+import com.chtrembl.petstoreapp.client.OrderServiceClient;
+import com.chtrembl.petstoreapp.client.PetServiceClient;
+import com.chtrembl.petstoreapp.client.ProductServiceClient;
 import com.chtrembl.petstoreapp.model.Category;
 import com.chtrembl.petstoreapp.model.ContainerEnvironment;
 import com.chtrembl.petstoreapp.model.Order;
@@ -7,53 +10,30 @@ import com.chtrembl.petstoreapp.model.Pet;
 import com.chtrembl.petstoreapp.model.Product;
 import com.chtrembl.petstoreapp.model.Tag;
 import com.chtrembl.petstoreapp.model.User;
-import com.chtrembl.petstoreapp.model.WebRequest;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
-import jakarta.annotation.PostConstruct;
+import feign.FeignException;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.MDC;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.BodyInserters;
-import org.springframework.web.reactive.function.client.WebClient;
-import org.springframework.web.reactive.function.client.WebClientException;
-import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class PetStoreServiceImpl implements PetStoreService {
-	private static final Logger logger = LoggerFactory.getLogger(PetStoreServiceImpl.class);
 
 	private final User sessionUser;
 	private final ContainerEnvironment containerEnvironment;
-	private final WebRequest webRequest;
-
-	private WebClient petServiceWebClient = null;
-	private WebClient productServiceWebClient = null;
-	private WebClient orderServiceWebClient = null;
-
-	@PostConstruct
-	public void initialize() {
-		this.petServiceWebClient = WebClient.builder()
-				.baseUrl(this.containerEnvironment.getPetStorePetServiceURL())
-				.build();
-		this.productServiceWebClient = WebClient.builder()
-				.baseUrl(this.containerEnvironment.getPetStoreProductServiceURL()).build();
-		this.orderServiceWebClient = WebClient.builder().baseUrl(this.containerEnvironment.getPetStoreOrderServiceURL())
-				.build();
-	}
+	private final PetServiceClient petServiceClient;
+	private final ProductServiceClient productServiceClient;
+	private final OrderServiceClient orderServiceClient;
 
 	@Override
 	public Collection<Pet> getPets(String category) {
@@ -68,43 +48,38 @@ public class PetStoreServiceImpl implements PetStoreService {
 							this.sessionUser.getName()),
 					this.sessionUser.getCustomEventProperties(), null);
 
-			Consumer<HttpHeaders> consumer = it -> it.addAll(this.webRequest.getHeaders());
-			pets = this.petServiceWebClient.get().uri("petstorepetservice/v2/pet/findByStatus?status=available")
-					.accept(MediaType.APPLICATION_JSON)
-					.headers(consumer)
-					.header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
-					.header("Cache-Control", "no-cache")
-					.retrieve()
-					.bodyToMono(new ParameterizedTypeReference<List<Pet>>() {
-					}).block();
+			pets = petServiceClient.getPetsByStatus("available");
 			this.sessionUser.setPets(pets);
 
-			pets = pets.stream().filter(pet -> category.equals(pet.getCategory().getName()))
+			pets = pets.stream()
+					.filter(pet -> category.equals(pet.getCategory().getName()))
 					.collect(Collectors.toList());
 
-			logger.info("Successfully retrieved {} pets for category {}", pets.size(), category);
+			log.info("Successfully retrieved {} pets for category {}", pets.size(), category);
 
 			return pets;
-		} catch (WebClientException wce) {
-			this.sessionUser.getTelemetryClient().trackException(wce);
+		} catch (FeignException fe) {
+			this.sessionUser.getTelemetryClient().trackException(fe);
 			this.sessionUser.getTelemetryClient().trackEvent(
-					String.format("PetStoreApp %s received %s, container host: %s",
+					String.format("PetStoreApp %s received Feign error %s (HTTP %d), container host: %s",
 							this.sessionUser.getName(),
-							wce.getMessage(),
+							fe.getMessage(),
+							fe.status(),
 							this.containerEnvironment.getContainerHostName())
 			);
-			logger.error("Failed to retrieve pets from PetStorePetService", wce);
-			throw new IllegalStateException("Unable to retrieve pets from the PetStorePetService", wce);
-		} catch (IllegalArgumentException iae) {
-			logger.error("Invalid argument when retrieving pets", iae);
+			log.error("Failed to retrieve pets from PetStorePetService via Feign client", fe);
+			throw new IllegalStateException("Unable to retrieve pets from the PetStorePetService", fe);
+		} catch (Exception e) {
+			log.error("Unexpected error when retrieving pets", e);
 
-			Pet pet = new Pet();
-			pet.setName("petstore.service.url:${PETSTOREPETSERVICE_URL} needs to be enabled for this service to work"
-					+ iae.getMessage());
-			pet.setPhotoURL("");
-			pet.setCategory(new Category());
-			pet.setId((long) 0);
-			pets.add(pet);
+			// Return error pet for display
+			Pet errorPet = new Pet();
+			errorPet.setName("petstore.service.url:${PETSTOREPETSERVICE_URL} needs to be enabled for this service to work: "
+					+ e.getMessage());
+			errorPet.setPhotoURL("");
+			errorPet.setCategory(new Category());
+			errorPet.setId((long) 0);
+			pets.add(errorPet);
 		} finally {
 			MDC.remove("operation");
 			MDC.remove("category");
@@ -116,43 +91,58 @@ public class PetStoreServiceImpl implements PetStoreService {
 	public Collection<Product> getProducts(String category, List<Tag> tags) {
 		List<Product> products;
 
-		try {
-			Consumer<HttpHeaders> consumer = it -> it.addAll(this.webRequest.getHeaders());
-			products = this.productServiceWebClient.get()
-					.uri("petstoreproductservice/v2/product/findByStatus?status=available")
-					.accept(MediaType.APPLICATION_JSON)
-					.headers(consumer)
-					.header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
-					.header("Cache-Control", "no-cache")
-					.retrieve()
-					.bodyToMono(new ParameterizedTypeReference<List<Product>>() {
-					}).block();
+		MDC.put("operation", "getProducts");
+		MDC.put("category", category);
 
+		try {
+			this.sessionUser.getTelemetryClient().trackEvent(
+					String.format("PetStoreApp user %s is requesting to retrieve products from the ProductService",
+							this.sessionUser.getName()),
+					this.sessionUser.getCustomEventProperties(), null);
+
+			products = productServiceClient.getProductsByStatus("available");
 			this.sessionUser.setProducts(products);
 
 			if (tags.stream().anyMatch(t -> t.getName().equals("large"))) {
-				products = products.stream().filter(product -> category.equals(product.getCategory().getName())
-						&& product.getTags().toString().contains("large")).collect(Collectors.toList());
+				products = products.stream()
+						.filter(product -> category.equals(product.getCategory().getName())
+								&& product.getTags().toString().contains("large"))
+						.collect(Collectors.toList());
 			} else {
-
-				products = products.stream().filter(product -> category.equals(product.getCategory().getName())
-						&& product.getTags().toString().contains("small")).collect(Collectors.toList());
+				products = products.stream()
+						.filter(product -> category.equals(product.getCategory().getName())
+								&& product.getTags().toString().contains("small"))
+						.toList();
 			}
+
+			log.info("Successfully retrieved {} products for category {} with tags {}",
+					products.size(), category, tags);
+
 			return products;
-		} catch (WebClientException | IllegalArgumentException wce) {
-			this.sessionUser.getTelemetryClient().trackException(wce);
+		} catch (FeignException fe) {
+			this.sessionUser.getTelemetryClient().trackException(fe);
 			this.sessionUser.getTelemetryClient().trackEvent(
-					String.format("PetStoreApp %s received %s, container host: %s",
+					String.format("PetStoreApp %s received Feign error %s (HTTP %d), container host: %s",
 							this.sessionUser.getName(),
-							wce.getMessage(),
+							fe.getMessage(),
+							fe.status(),
 							this.containerEnvironment.getContainerHostName())
 			);
-			throw new IllegalStateException("Unable to retrieve products from product service", wce);
+			log.error("Failed to retrieve products from ProductService via Feign client", fe);
+			throw new IllegalStateException("Unable to retrieve products from product service", fe);
+		} finally {
+			MDC.remove("operation");
+			MDC.remove("category");
 		}
 	}
 
 	@Override
 	public void updateOrder(long productId, int quantity, boolean completeOrder) {
+		MDC.put("operation", "updateOrder");
+		MDC.put("productId", String.valueOf(productId));
+		MDC.put("quantity", String.valueOf(quantity));
+		MDC.put("completeOrder", String.valueOf(completeOrder));
+
 		this.sessionUser.getTelemetryClient()
 				.trackEvent(String.format(
 						"PetStoreApp user %s is trying to update an order",
@@ -167,13 +157,14 @@ public class PetStoreServiceImpl implements PetStoreService {
 			String userEmail = this.sessionUser.getEmail();
 			if (userEmail != null && !userEmail.trim().isEmpty()) {
 				updatedOrder.setEmail(userEmail);
-				logger.debug("Setting order email to: {}", userEmail);
+				log.debug("Setting order email to: {}", userEmail);
 			} else {
-				logger.warn("User email is not available for session: {}", this.sessionUser.getSessionId());
+				log.warn("User email is not available for session: {}", this.sessionUser.getSessionId());
 			}
 
 			if (completeOrder) {
 				updatedOrder.setComplete(true);
+				log.info("Completing order for session: {}", this.sessionUser.getSessionId());
 			} else {
 				List<Product> products = new ArrayList<>();
 				Product product = new Product();
@@ -181,60 +172,64 @@ public class PetStoreServiceImpl implements PetStoreService {
 				product.setQuantity(quantity);
 				products.add(product);
 				updatedOrder.setProducts(products);
+				log.debug("Adding/updating product {} with quantity {} to order", productId, quantity);
 			}
 
-			String orderJSON = new ObjectMapper().setSerializationInclusion(Include.NON_NULL)
+			// Serialize order to JSON
+			String orderJSON = new ObjectMapper()
+					.setSerializationInclusion(Include.NON_NULL)
 					.disable(SerializationFeature.FAIL_ON_EMPTY_BEANS)
-					.configure(SerializationFeature.FAIL_ON_SELF_REFERENCES, false).writeValueAsString(updatedOrder);
+					.configure(SerializationFeature.FAIL_ON_SELF_REFERENCES, false)
+					.writeValueAsString(updatedOrder);
 
-			Consumer<HttpHeaders> consumer = it -> it.addAll(this.webRequest.getHeaders());
+			Order resultOrder = orderServiceClient.createOrUpdateOrder(orderJSON);
+			log.info("Successfully updated order via Feign client: {}", resultOrder.getId());
 
-			updatedOrder = this.orderServiceWebClient.post().uri("petstoreorderservice/v2/store/order")
-					.body(BodyInserters.fromPublisher(Mono.just(orderJSON), String.class))
-					.accept(MediaType.APPLICATION_JSON)
-					.headers(consumer)
-					.header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
-					.header("Cache-Control", "no-cache")
-					.retrieve()
-					.bodyToMono(Order.class).block();
+		} catch (FeignException fe) {
+			log.error("Unable to update order via Feign client: HTTP {} - {}", fe.status(), fe.getMessage(), fe);
+			this.sessionUser.getTelemetryClient().trackException(fe);
+			throw new IllegalStateException("Unable to update order via order service", fe);
 		} catch (Exception e) {
-			logger.error("Unable to retrieve order from order service", e);
-			throw new IllegalStateException("Unable to retrieve order from order service", e);
+			log.error("Unexpected error updating order", e);
+			this.sessionUser.getTelemetryClient().trackException(e);
+			throw new IllegalStateException("Unable to update order via order service", e);
+		} finally {
+			MDC.remove("operation");
+			MDC.remove("productId");
+			MDC.remove("quantity");
+			MDC.remove("completeOrder");
 		}
 	}
 
 	@Override
 	public Order retrieveOrder(String orderId) {
+		MDC.put("operation", "retrieveOrder");
+		MDC.put("orderId", orderId);
+
 		this.sessionUser.getTelemetryClient()
 				.trackEvent(String.format(
 						"PetStoreApp user %s is requesting to retrieve an order from the PetStoreOrderService",
 						this.sessionUser.getName()), this.sessionUser.getCustomEventProperties(), null);
 
-		Order order = null;
 		try {
-			Consumer<HttpHeaders> consumer = it -> it.addAll(this.webRequest.getHeaders());
-
-			order = this.orderServiceWebClient.get()
-					.uri(uriBuilder -> uriBuilder.path("petstoreorderservice/v2/store/order/{orderId}").build(orderId))
-					.accept(MediaType.APPLICATION_JSON)
-					.headers(consumer)
-					.header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
-					.header("Cache-Control", "no-cache")
-					.retrieve()
-					.onStatus(
-							status -> status.value() == 404,
-							response -> Mono.empty()
-					)
-					.bodyToMono(new ParameterizedTypeReference<Order>() {
-					})
-					.block();
-
+			Order order = orderServiceClient.getOrder(orderId);
+			log.debug("Successfully retrieved order: {}", orderId);
 			return order;
 
+		} catch (FeignException.NotFound e) {
+			log.debug("Order not found: {}", orderId);
+			return null;
+		} catch (FeignException fe) {
+			log.error("Unable to retrieve order via Feign client: HTTP {} - {}", fe.status(), fe.getMessage(), fe);
+			this.sessionUser.getTelemetryClient().trackException(fe);
+			throw new IllegalStateException("Unable to retrieve order from order service", fe);
 		} catch (Exception e) {
-			logger.error("Unable to retrieve order from order service", e);
+			log.error("Unexpected error retrieving order: {}", orderId, e);
+			this.sessionUser.getTelemetryClient().trackException(e);
 			throw new IllegalStateException("Unable to retrieve order from order service", e);
+		} finally {
+			MDC.remove("operation");
+			MDC.remove("orderId");
 		}
 	}
-
 }
